fix(proxy): Authentication username/password must be null for system properties as well